# simpleHTTPserver

./: .gitignore  README.md  main.py
C_server/source/: 404.html  index.html
data/: comments.txt
pages/: login_page.html
simple_c_server/: README.md
simple_c_server/source/: CMakeLists.txt  main.c  myhttpd.c  myhttpd.h
